# pprl

./: .gitignore  LICENSE  README.md  create_CLKs.py  create_CLKs.yml  match_CLKs.py  match_CLKs.yml  pyproject.toml  runtests.sh  setup.sh
.github/workflows/: run-pytest-suite.yml  validate-primary-schema.yml
my_files/: README.txt  create_CLKs.yml  deduplicate.yml  match_CLKs.yml
schemas/: README.md  schema.json
src/: pprl.py  pprl_utilities.py
src/pprl/: cli.py  pprl.py  pprl_utilities.py  util.py
src/pprl/commands/: create.py  dedup.py  deduplicate.py  filter.py  match.py  report.py  synth.py  test.py
src/pprl/tests/: 01_integrity_test.py  02_privacy_test.py  03_accurracy_test.py  04_usability_test.py  05_performance_test.py  conftest.py  integrity_test.py  templates.py  test_functionality.py  test_input_validation.py  usability_test.py  utilities.py
src/pprl/tests/configs/: match_CLKs.yml
src/pprl/tests/data/: 100-patients-capitalization.csv  100-patients-missing-data.csv  100-patients-off-by-1.csv  100-patients-original.csv  20-patients-capitalization.tsv  20-patients-original.tsv  20_test_matches_A1.csv  20_test_matches_a.csv  20_test_matches_b.csv  3_test_patients.csv  3_test_patients_ID_matches.csv  (+4 more)
tests/: pprl_test_templates.py  pprl_test_utilities.py  test_functionality.py
tests/configs/: create_CLKs.yml  match_CLKs.yml  self_match_CLKs.yml
tests/data/: 20_test_matches_B1.csv  20_test_matches_b.csv
tests/populations/: 200_simple_synthetic.csv  20_test_matches_a.csv
tests/schemas/: 20_ordering.json
tests/tmp/: README.txt
(+8 files in other folders)
